force-app/main/default/objects/Contact/fields/AcceptingNewClients__c.field-meta.xml
<CustomField>
    <fullName>AcceptingNewClients__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the contact is accepting new clients</description>
    <label>Accepting New Clients</label>
    <type>Checkbox</type>
</CustomField>