force-app/main/default/objects/Contact/fields/atlas1__FacilitatorStatus__c.field-meta.xml
<CustomField>
    <fullName>atlas1__FacilitatorStatus__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Facilitator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified-Active</fullName>
            </value>
            <value>
                <fullName>Certified-Hold</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Initial Inquiry</fullName>
            </value>
            <value>
                <fullName>In Training</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>