force-app/main/default/objects/Contact/fields/BackgroundCheck__c.field-meta.xml
<CustomField>
    <fullName>BackgroundCheck__c</fullName>
    <label>Background Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Criminal and Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>