force-app/main/default/objects/Contact/fields/FacilitatorAvailabilityNotes__c.field-meta.xml
<CustomField>
    <fullName>FacilitatorAvailabilityNotes__c</fullName>
    <description>Notes about a Team Facilitator&apos;s availability</description>
    <label>Availability Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>